[package]
name = "crom"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.0.0-alpha.4"
http-client = "3.0.0"
graphql_client = "0.9.0"
serde = "1.0.114"

[features]
default = ["native-client"]
native-client = ["surf/native-client"]
h1-client = ["surf/h1-client"]
