[package]
name = "crom"
version = "0.2.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
description = "API client for Crom, a scraper for the SCP Wiki and related projects"
repository = "https://github.com/leo60228/crom"
homepage = "https://github.com/leo60228/crom"
readme = "README.md"
keywords = ["api", "crom", "scp", "client"]
categories = ["api-bindings", "asynchronous"]
license = "MIT OR Apache-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "leo60228/crom" }
is-it-maintained-open-issues = { repository = "leo60228/crom" }
maintenance = { status = "experimental"}

[dependencies]
surf = "2.0.0-alpha.4"
http-client = "3.0.0"
graphql_client = "0.9.0"
serde = "1.0.114"
thiserror = "1.0.20"
serde_json = "1.0.57"

[features]
default = ["native-client"]
native-client = ["surf/native-client"]
h1-client = ["surf/h1-client"]

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
